[Release 1.2 version 1.2.1] fixed bug on Mobile

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -282,6 +282,16 @@ figcaption {
   display: block;
 }
 
+@media (hover: none) and (pointer: coarse) {
+  .user-profile {
+    /* background-color: lightblue; */
+  }
+}
+
+.user-profile:active {
+  background-color: lightgray;
+}
+
 .info-container {
   display: flex;
   flex-direction: column;
